--- a/manifest.json
+++ b/manifest.json
@@ -13,16 +13,12 @@
     "128": "icon-128.png"
   },
   "background": {
-    "scripts": ["html2canvas.min.js", "main.js"],
+    "scripts": ["main.js"],
     "persistent": false
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
-    }
-  ], 
   "permissions": [
-   "activeTab"
+   "activeTab",
+   "tabs",
+   "<all_urls>"
   ]
 }
